--- a/faq.html
+++ b/faq.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>FAQ Page - Modern Business - Start Bootstrap Template</title>
+    <title>FAQ Page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
